Java 8 compatible build